--- a/index.html
+++ b/index.html
@@ -2,50 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expert Commercial Lawn Services in Canada - commerciallawnservices.ca</title>
-    <meta name="description" content="Elevate your business’s exterior with our professional commercial lawn services across Canada. Tailored care, sustainable practices, and impeccable landscapes - commerciallawnservices.ca.">
-    <link rel="stylesheet" href="styles.css"> <!-- You'll need to create your own CSS file or link to an existing one -->
+    <title>Welcome to Commercial Lawn Services Canada</title>
 </head>
 <body>
     <header>
         <h1>Welcome to Commercial Lawn Services Canada</h1>
-        <p>Where First Impressions Begin With Green</p>
     </header>
 
-    <section id="services">
-        <h2>Our Professional Services</h2>
-        <ul>
-            <li><strong>Customized Lawn Maintenance:</strong> We create a maintenance plan tailored to your unique landscape...</li>
-            <li><strong>Eco-Friendly Lawn Care Solutions:</strong> Sustainability is at our core...</li>
-            <li><strong>Seasonal Clean-Up:</strong> Canada's seasons are no match for our team...</li>
-            <li><strong>Tree and Shrub Care:</strong> Beyond grass, we nurture the health and beauty of your trees and shrubs...</li>
-        </ul>
-    </section>
+    <main>
+        <section>
+            <h2>Customized Lawn Maintenance</h2>
+            <p>Commercial landscapes are as diverse as the businesses they represent, requiring a nuanced approach to lawn maintenance. Our approach is data-driven; we assess soil pH, turfgrass species, and prevalent local pests and diseases to tailor a maintenance program that optimizes mowing schedules, watering routines, and fertilization plans. This ensures the health and resilience of your lawn, while also making efficient use of resources.</p>
+        </section>
 
-    <section id="why-choose-us">
-        <h2>Why Choose Us?</h2>
-        <ul>
-            <li><strong>Tailored Approach:</strong> We don’t believe in 'one-size-fits-all'...</li>
-            <li><strong>Expertise You Can Trust:</strong> Our team of professionals brings knowledge and experience...</li>
-            <li><strong>Unwavering Commitment to Quality:</strong> From meticulous trimming to strategic landscaping...</li>
-            <li><strong>Responsive Customer Service:</strong> Your satisfaction is our priority...</li>
-        </ul>
-    </section>
+        <section>
+            <h2>Eco-Friendly Lawn Care Solutions</h2>
+            <p>Our lawn care strategy is rooted in the principles of Integrated Pest Management (IPM) and soil health. We use biocontrol agents that work with the ecosystem to control pests rather than chemical treatments that can harm beneficial organisms. Our fertilization regimen leverages slow-release, plant-based nutrients that enrich the soil biome, encouraging strong roots and disease-resistant turf without the ecological impact of synthetic fertilizers.</p>
+        </section>
 
-    <section id="contact">
-        <h2>Join Our Green Thumb Community</h2>
-        <p>Partner with Commercial Lawn Services Canada to turn your commercial landscape into a testament to your business’s excellence. Contact us today for a consultation...</p>
-        <p><strong>Get in Touch:</strong></p>
-        <p>[Phone Number]</p>
-        <p>[Email]</p>
-        <!-- Ideally, you would have a form here for users to fill out -->
-        <p>Or fill out our online contact form, and we’ll craft a lawn care plan that suits your commercial needs.</p>
-    </section>
+        <section>
+            <h2>Seasonal Clean-Up</h2>
+            <p>The Canadian climate demands a responsive approach to lawn care. We use specialized equipment that causes minimal soil compaction during aeration, and our seeding techniques consider germination times and seed-soil contact for improved take rates. In autumn, our leaf removal process is timed to reduce habitat for pests over winter, and our soil amendments are based on annual soil test results to correct any deficiencies before the frost.</p>
+        </section>
 
-    <footer>
-        <p>Let Commercial Lawn Services Canada be the guardian of your green space...</p>
-    </footer>
+        <section>
+            <h2>Tree and Shrub Care</h2>
+            <p>Our arborists employ precision pruning techniques based on the species-specific growth patterns and health requirements of your trees and shrubs. We conduct detailed inspections for early signs of stress or disease, applying targeted interventions such as microinjection treatments to bolster defense systems in trees and introducing mycorrhizal fungi to improve nutrient uptake in shrubs. This results in a more vibrant and robust landscape that enhances the visual appeal of your property.</p>
+        </section>
+
+        <section>
+            <h2>Why Choose Us?</h2>
+            <h3>Tailored Approach</h3>
+            <p>We reject the 'one-size-fits-all' model. Our services are based on a thorough understanding of your property's unique features and requirements. We design a program specific to your site's topography, plant varieties, and microclimatic conditions.</p>
+
+            <h3>Expertise You Can Trust</h3>
+            <p>Our professional staff combines formal education with field expertise. This fusion of knowledge and experience means that every aspect of your landscape maintenance is backed by best practices and the latest research in agronomy and horticulture.</p>
+
+            <h3>Unwavering Commitment to Quality</h3>
+            <p>We focus on the details—meticulous trimming, soil health, and precise application of treatments are cornerstones of our work ethic. Our strategic approach extends beyond maintenance to encompass landscape enhancements that align with your brand's image and sustainability goals.</p>
+
+            <h3>Responsive Customer Service</h3>
+            <p>We maintain open, consistent communication to ensure your needs and expectations are met with diligence and flexibility. Client satisfaction drives our process, from the initial consultation to the regular care of your landscape.</p>
+        </section>
+
+        <section>
+            <h2>Join Our Green Thumb Community</h2>
+            <p>Engage with Commercial Lawn Services Canada for expert landscape transformation that reflects your organization's quality and attention to detail. Reach out for a data-driven, comprehensive consultation to elevate your property's aesthetic and environmental value.</p>
+        </section>
+
+        <section>
+            <h2>Get in Touch</h2>
+            <p>To schedule a detailed landscape audit with our specialists:</p>
+            <ul>
+                <li>Call us at: [Phone Number]</li>
+                <li>Email us: [Email]</li>
+            </ul>
+            <p>Alternatively, use our digital contact form for a prompt response. We'll work with you to develop a customized lawn care strategy, addressing your specific commercial landscaping objectives.</p>
+            <p>With Commercial Lawn Services Canada, entrust your outdoor spaces to hands that understand the art and science of landscape management.</p>
+        </section>
+    </main>
 </body>
 </html>
